--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HappyDelivApp</string>
     <string name="google_maps_api_key">AIzaSyApv_RaL_j3NnycJzEhQIgQ3XdhQ1awKhU</string>
     <string name="sms_official_sender">MDMedia</string>
+    <string name="google_place_api_key">AIzaSyC_BJqIOKN5BIx-I9SMlSyVXkQhVB455BU</string>
 </resources>
